added some styling

--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -1,29 +1,4 @@
 .background {
     background-image: url(./Images/marvelBackground.png);
-    background-size: auto;
-}
-
-p {
-    font-weight: bolder;
-    font-size: 100px;
-}
-
-li {
-    font-size: 28px;
-    list-style: none;
-}
-
-button {
-    font-size: 24px;
-}
-
-.cartoon {
-    width: auto;
-    height: 500px;
-}
-
-.supercard {
-    border: 5px;
-    border-style: solid;
-    margin: 10px;
+    height: 100%;
 }
