--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -2,3 +2,17 @@
     background-image: url(./Images/marvelBackground.png);
     height: 100%;
 }
+
+p {
+    font-weight: bolder;
+    font-size: 100px;
+}
+
+li {
+    font-size: 28px;
+    list-style: none;
+}
+
+button {
+    font-size: 24px;
+}
