--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -27,3 +27,17 @@ button {
     border-style: solid;
     margin: 10px;
 }
+
+p {
+    font-weight: bolder;
+    font-size: 100px;
+}
+
+li {
+    font-size: 28px;
+    list-style: none;
+}
+
+button {
+    font-size: 24px;
+}
