--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -18,26 +18,12 @@ button {
 }
 
 .cartoon {
-    width: 400px;
-    height: auto;
+    width: auto;
+    height: 500px;
 }
 
 .supercard {
     border: 5px;
     border-style: solid;
     margin: 10px;
-}
-
-p {
-    font-weight: bolder;
-    font-size: 100px;
-}
-
-li {
-    font-size: 28px;
-    list-style: none;
-}
-
-button {
-    font-size: 24px;
 }
