--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -16,3 +16,14 @@ li {
 button {
     font-size: 24px;
 }
+
+.cartoon {
+    width: 400px;
+    height: auto;
+}
+
+.supercard {
+    border: 5px;
+    border-style: solid;
+    margin: 10px;
+}
