--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -13,11 +13,23 @@
 
 p {
     font-weight: bolder;
-    font-size: 100px;
+    font-size: 50px;
+}
+
+.q-title {
+    margin-top: 30px;
 }
 
 .description {
     font-size: 20px;
+}
+
+.main-page{
+    font-size: 72px;
+}
+
+ul {
+    margin-top: 100px;
 }
 
 li {
@@ -49,4 +61,12 @@ button {
 
 .btn {
     background-color: red;
+}
+
+#startQuiz {
+    margin-top: 230px;
+}
+
+button, #startQuiz {
+    font-size: 50px;
 }
