--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -43,22 +43,18 @@ button {
     color: white;
 }
 
-.cartoon {
-    width: 400px;
-    height: auto;
-}
-
-.supercard {
-    border: 5px;
-    border-style: solid;
-    margin: 10px;
-}
-
 .card {
     margin: 0 auto; /* Added */
     float: none; /* Added */
     margin-bottom: 10px; /* Added */
     background-color: lightgrey;
+    width: 400px;
+}
+
+.links, a {
+    width: 100%;
+    text-decoration: none;
+    color: white;
 }
 
 .btn {
@@ -73,7 +69,6 @@ button, #startQuiz {
     font-size: 50px;
 }
 
-
 #reset {
     margin: auto;
     margin-top: 10px;
@@ -83,4 +78,39 @@ button, #navigation {
     width: 500px;
     padding: auto;
     margin: auto;
+}
+
+@media screen and (max-width: 992px) {
+    .background {
+        background-size: 200px;
     }
+}
+
+@media screen and (max-width: 768px) {
+    .background {
+        background-size: 100px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .background {
+        background-size: 50px;
+    }
+
+    p, .main-page, #startQuiz {
+        font-size: 25px;
+    }
+
+    button, .btn, #navigation {
+        font-size: 15px;
+        width: 250px
+    }
+
+    .card {
+        width: 50%;
+    }
+    
+    .card-text {
+        font-size: 12px;
+    }
+}
